--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -107,7 +107,14 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aggregations.cs" />
+    <Compile Include="ArticleViewModelBase.cs" />
+    <Compile Include="BindableBase.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="Feed.cs" />
+    <Compile Include="FeedViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeFilter.cs" />
     <EmbeddedResource Include="Properties\BE.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
