--- a/PL/project.json
+++ b/PL/project.json
@@ -1,7 +1,9 @@
 ﻿{
   "dependencies": {
+    "Elasticsearch.Net": "5.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "NEST": "5.2.0"
+    "NEST": "5.0.0",
+    "Newtonsoft.Json": "9.0.1"
   },
   "frameworks": {
     "uap10.0": {}
